<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/holo_red_light">

    <TextView
        android:id="@+id/textCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCounter"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCounter" />

    <!-- Botón para reiniciar el contador -->
    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonReset"
        android:layout_marginTop="8dp" />
</LinearLayout>
